Add brand table
